# dota_profile

./: .gitignore  README.md  Taskfile.yaml  compose.yaml
my_team/: Dockerfile  config.py  main.py  pyproject.toml
my_team/docker/: app.sh
my_team/game_data/models/: data_for_game.py
my_team/interfase/: orm_interface.py
my_team/migrations/: env.py
my_team/users/: manager.py  shemas.py
my_team/users/depends/: pars_dota_match.py
my_team/users/models/: users_model.py
my_team/users/routers/: users_routers.py
parse_dota/: Dockerfile  main.py  pyproject.toml
parse_dota/config/: config.py
parse_dota/crud_mongo/matches/: mathes.py
