[tool.poetry]
name = "parse-dota"
version = "0.1.0"
description = ""
authors = ["Mihail Pugachev <xd393727@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pymongo = {extras = ["srv"], version = "^4.6.1"}
fastapi = "^0.109.0"
requests = "^2.31.0"
uvicorn = {extras = ["standard"], version = "^0.27.0.post1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
